tests/snapshots/formats__toml__Cargo.toml.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ Cargo.toml — TOML document: [package] demo, 4 tables  [0x0+0x23c]
    title: "TOML \"example\" é"  [0x15+0x19]
    literal: "C:\\Users\\nobody"  [0x39+0x11]
    quoted key: 1000  [0x5a+0x5]
    site.google.com: true  [0x74+0x4]
  ▾ [package] — 4 entries  [0x7a+0x77]
      name: "demo"  [0x8b+0x6]
      version: "0.1.0"  [0x9c+0x7]
      edition: "2024"  [0xae+0x6]
    ▾ authors — array, 2 elements  [0xbf+0x30]
        [0]: "Ana <ana@example.com>"  [0xc3+0x17]
        [1]: "Bob"  [0xe7+0x5]
  ▾ [dependencies] — 11 entries  [0xf1+0x116]
    ▾ serde — inline table, 2 keys  [0x108+0x28]
        version: "1"  [0x114+0x3]
      ▾ features — array, 1 element  [0x124+0xa]
          [0]: "derive"  [0x125+0x8]
      hex: 3735928559  [0x137+0xb]
      oct: 493  [0x149+0x5]
      bin: 13  [0x155+0x6]
      pi: 3.14159  [0x161+0x8]
      neg: -inf  [0x170+0x4]
      when: 1979-05-27 07:32:00 UTC  [0x17c+0x14]
      local: "1979-05-27" — local date/time  [0x199+0xa]
      desc: "Multi-line\n\"quoted\" text"  [0x1ab+0x1f]
      raw: "no \\escapes"  [0x1d1+0x12]
    ▾ nested — array, 3 elements  [0x1ed+0x18]
      ▾ [0] — array, 2 elements  [0x1ee+0x6]
          [0]: 1  [0x1ef+0x1]
          [1]: 2  [0x1f2+0x1]
      ▾ [1] — array, 2 elements  [0x1f6+0xa]
          [0]: "a"  [0x1f7+0x3]
          [1]: "b"  [0x1fc+0x3]
        [2] — array, 0 elements  [0x202+0x2]
  ▾ [[bin]] — 1 entry  [0x207+0x18]
      name: "first"  [0x216+0x7]
  ▾ [[bin]] — 1 entry  [0x21f+0x1d]
      name: "second"  [0x22e+0x8]
      oops  [0x237+0x5]
        ! malformed: expected `=`
